pull from ooni-probe(TheTorProject)

--- a/data/Makefile
+++ b/data/Makefile
@@ -1,10 +1,10 @@
 geoip:
-	wget http://www.maxmind.com/download/geoip/database/asnum/GeoIPASNum.dat.gz
-	gunzip GeoIPASNum.dat.gz
-	wget http://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz
-	gunzip GeoIP.dat.gz
-	wget http://geolite.maxmind.com/download/geoip/database/GeoLiteCity.dat.gz
-	gunzip GeoLiteCity.dat.gz
+	wget -N http://www.maxmind.com/download/geoip/database/asnum/GeoIPASNum.dat.gz
+	gunzip -f GeoIPASNum.dat.gz
+	wget -N http://geolite.maxmind.com/download/geoip/database/GeoLiteCountry/GeoIP.dat.gz
+	gunzip -f GeoIP.dat.gz
+	wget -N http://geolite.maxmind.com/download/geoip/database/GeoLiteCity.dat.gz
+	gunzip -f GeoLiteCity.dat.gz
 clean:
 	rm -f *.dat
 
